<resources>
    <string name="app_name">Formadu</string>
    <string name="lema">Conectando con la educación</string>
    <string name="buscador">Buscar…</string>
    <string name="filtroTodos">VER TODO</string>
    <string name="alumnosTitulo">Alumnos</string>
    <string name="empresasTitulo">Empresas</string>
    <string name="empresaAsignar">Empresa asignada</string>

    <!--campos de texto-->
    <string name="usuario">CORREO</string>
    <string name="contrasena">CONTRASEÑA</string>
    <string name="contrasenaConfirm">CONFIRMAR CONTRASEÑA</string>
    <string name="contrasenaConfirmMin">Confirmar contraseña</string>

    <!--texto-->
    <string name="nombreMin">Nombre</string>
    <string name="nombre">NOMBRE Y APELLIDOS</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="cambiarContrasena">Cambiar Contraseña</string>
    <string name="alumnosP">Alumnos de Prácticas</string>
    <string name="anadirAlumnoTitulo">Alumno nuevo</string>
    <string name="contrasenaNueva">Nueva contraseña</string>
    <string name="correoDato">nombre@gmail.com</string>
    <string name="sinCuenta">¿No tienes cuenta?</string>
    <string name="conCuenta">¿Ya tienes cuenta?</string>
    <string name="sinContrasena">¿Has olvidado la contraseña?</string>
    <string name="empresa">Empresa: </string>
    <string name="horas">Horas restantes</string>
    <string name="horasTotal">Horas de prácticas</string>
    <string name="horasN" translatable="false"> h</string>
    <string name="horasEjemplo" translatable="false">8h</string>
    <string name="semanaTitulo">Última semana</string>
    <string name="numAlumnos">¡Tienes %d alumnos!</string>

    <!--semana-->
    <string name="planificacionSemana">Planificación Semanal</string>
    <string name="lunes">LUNES</string>
    <string name="Martes">MARTES</string>
    <string name="Miercoles">MIÉRCOLES</string>
    <string name="Jueves">JUEVES</string>
    <string name="Viernes">VIERNES</string>
    <string name="lunesMin">Lunes</string>
    <string name="MartesMin">Martes</string>
    <string name="MiercolesMin">Miercoles</string>
    <string name="JuevesMin">Jueves</string>
    <string name="ViernesMin">Viernes</string>


    <!--botones-->
    <string name="entrar">Entrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="volver">Volver</string>
    <string name="registrar">Registrarse</string>
    <string name="anadirAlumno">Añadir</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="eliminarAlumno">Borrar alumno</string>
    <string name="cerrar">Cerrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="crearMayuculas">CREAR</string>
    <string name="crear">Crear</string>
    <string name="recuperar">Recuperar</string>
    <string name="tema">Tema</string>
    <string name="descripcion">Descripcion</string>
    <string name="contrasenaMin">Contraseña</string>
    <string name="idioma">Idioma</string>
    <string name="temaClaro">Claro</string>
    <string name="temaOscuro">Oscuro</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>

    <!--confirmacion-->
    <string name="accesoNuevo">¡Nuevo alumno añadido!</string>
    <string name="profesorNuevo">¡Cuenta creada!</string>
    <string name="salir">¿Quieres salir?</string>
    <string name="perderDatos">Perderás todos los datos del alumno…</string>

    <!--errores-->
    <string name="e_general">Ups… Algo ha fallado </string>
    <string name="e_listaVacia">¡Añade a tus alumnos!</string>
    <string name="e_horasMin">El mínimo son %1$s horas </string>
    <string name="e_horasMax">El máximo son %s horas, tienes %s horas</string>
    <string name="e_horasCompletas">Debe introducir horas completas</string>
    <string name="e_horasMaxSem">El máximo son 40 horas a la semana</string>
    <string name="e_correo">Debe introducir el correo correctamente</string>
    <string name="e_nombre">Debe introducir el nombre correctamente</string>
    <string name="e_nombreCompleto">Debe introducir nombre y apellidos</string>
    <string name="e_apellidos">Debe introducir los dos apellidos </string>
    <string name="e_empresa">Debe elegir una de las empresas disponibles</string>
    <string name="e_img">Debe introducir una url correcta</string>
    <string name="e_vacio">Debe rellenar todos los campos</string>
    <string name="e_duplicado">Ya existe un alumno con ese correo</string>
    <string name="e_random">El servidor está saturado, vuelva a intentarlo en unos minutos </string>
    <string name="cambioIdioma">Changing language to Spanish…</string>


</resources>