<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogo_fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tituloDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/peralta"
        android:text="@string/salir"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tituloDialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/peralta"
        android:text="@string/perderDatos"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azulOscuroB"
            android:fontFamily="@font/roboto_black"
            android:padding="15dp"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/azulOscuro"
            android:fontFamily="@font/roboto_black"
            android:padding="15dp"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
