<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulOscuro"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:rotation="10"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/tituloCorreo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/peralta"
                android:text="@string/usuario"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/usuarioNuevo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/boton_azul"
                android:ems="10"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tituloContrasena2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/peralta"
                android:text="@string/contrasena"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/contrasenaNueva"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/boton_azul"
                android:ems="10"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recuperarTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/caveat"
                    android:text="@string/sinContrasena"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/recuperarCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:backgroundTint="@color/azulOscuroB"
                    android:fontFamily="@font/peralta"
                    android:text="@string/recuperar"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>